<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager_banner"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewPager_banner"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btn1_mainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:paddingVertical="20dp"
            android:text="@string/btn1_mainPage" />

        <Button
            android:id="@+id/btn2_mainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:paddingVertical="20dp"
            android:text="@string/btn2_mainPage" />

        <Button
            android:id="@+id/btn3_mainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:layout_margin="10dp"
            app:layout_columnWeight="1"
            android:textSize="20sp"
            android:paddingVertical="20dp"
            android:text="@string/btn3_mainPage"/>

        <Button
            android:id="@+id/btn4_mainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:paddingVertical="20dp"
            android:text="@string/btn4_mainPage"/>
    </android.support.v7.widget.GridLayout>
</RelativeLayout>