<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8.5">

        <TextView
            android:id="@+id/title_test_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/diet_testing"
            />

        <android.support.v7.widget.CardView
            android:id="@+id/info_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_test_main">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/info_test_main"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textColor="@color/colorGray"
                    android:textSize="16sp"
                    android:textAlignment="center"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="1"
                        android:textSize="16sp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/info_tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="2"
                        android:textSize="16sp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/info_tv3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="3"
                        android:textSize="16sp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/info_tv4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="4"
                        android:textSize="16sp"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/info_tv5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="5"
                        android:textSize="16sp"
                        android:textAlignment="center"/>
                </TableRow>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/test_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_cardView"
            android:layout_margin="5dp">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_weight="1.5">

        <ImageView
            android:id="@+id/iv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btn_submit"
            app:srcCompat="@drawable/round_trending_flat_black_24dp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/btn_submit"/>

    </RelativeLayout>



</LinearLayout>